Scrollbar styling + a few small fixes

--- a/.less/Darkmode.less
+++ b/.less/Darkmode.less
@@ -23,6 +23,7 @@
 @edit-area-bg:          #a9a9a9;
 @theme-blue:            darken(#438ab5, 15%);
 @theme-blue-lighter:    lighten(@theme-blue, 8%);
+@scroll-bar-main-color: hsl(0, 0%, 20%);
 
 // ≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡
 //      Imports
