--- a/.less/Page header.less
+++ b/.less/Page header.less
@@ -118,6 +118,10 @@
     
     .wds-dropdown__content {
         .dropdown-styling;
+        
+        ul {
+            .scroll-bar-styling;
+        }
     }
 }
 
